# eae-claw

./: README.md  auto-pull.ps1  index.html  package.json  vite.config.js
src/: main.js  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
