[package]
name = "eae-claw"
version = "0.1.0"
description = "Eae Claw - Desktop voice chat with OpenClaw"
authors = ["Henrique-Claw <henrique@hestiasolutions.com>"]
edition = "2021"

[lib]
name = "eae_claw_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-http = "2"
tauri-plugin-fs = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
